--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     text-align: center;
     font-size: 30px;
     color: darkblue;
+    /* background-color: dimgray; */
     margin-top: 10px;
 }
 .container{
